<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:id="@+id/relative_popup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_450"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/heading_text_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_ban"
            android:textSize="@dimen/dimen_18"
            android:textStyle="bold"
            android:textColor="@color/bright_green"
            android:padding="@dimen/dimen_10"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            tools:ignore="SpUsage" />
        <View
            android:id="@+id/view_popup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:layout_below="@+id/heading_text_popup"
            android:background="@android:color/darker_gray" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view_popup"
            android:layout_above="@+id/view_popup2"

            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/main_text_popup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shc_rules_ban"
                    android:textSize="@dimen/dimen_14"
                    android:justificationMode="inter_word"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:layout_marginBottom="@dimen/dimen_5"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_marginRight="@dimen/dimen_10"
                    tools:ignore="SpUsage,UnusedAttribute" />
            </ScrollView>

        </RelativeLayout>

        <View
            android:id="@+id/view_popup2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:layout_above="@+id/relative_confirm"
            android:background="@android:color/darker_gray" />
        <RelativeLayout
            android:id="@+id/relative_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btn_ok"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen_38"
                        android:text="@string/agree_name_ban"
                        android:textSize="@dimen/dimen_16"
                        android:textColor="@color/bright_green"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:background="@android:color/transparent"
                        android:layout_marginEnd="@dimen/dimen_10"
                        android:layout_alignParentEnd="true"
                        tools:ignore="SpUsage" />

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen_38"

                        android:layout_toStartOf="@+id/btn_ok"
                        android:background="@android:color/transparent"
                        android:text="@string/disagree_name_ban"
                        android:textColor="@color/bright_green"
                        android:textSize="@dimen/dimen_16"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        tools:ignore="SpUsage" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>