<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_5"
        app:cardElevation="@dimen/dimen_5"
        android:layout_marginTop="@dimen/dimen_5"
        android:layout_marginBottom="@dimen/dimen_5"
        android:layout_marginHorizontal="@dimen/dimen_10"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/dimen_10"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_marginBottom="@dimen/dimen_5"
            android:gravity="center"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_contact_layout"
                android:layout_width="@dimen/dimen_50"
                android:layout_height="@dimen/dimen_50"
                android:src="@drawable/ic_baseline_person"
                app:civ_border_color="@android:color/transparent"
                app:civ_border_width="0dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/dimen_10" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_10"
                android:paddingRight="@dimen/dimen_10"
                android:layout_toStartOf="@+id/imgbtn_call"
                android:layout_toEndOf="@+id/image_contact_layout">

                <TextView
                    android:id="@+id/text_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"

                    android:text="@string/app_name"
                    android:textColor="@color/bright_green"
                    android:textSize="@dimen/dimen_20"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/text_address_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_name_layout"
                    android:gravity="start"

                    android:text="@string/volunteer_address"
                    android:textColor="@color/bright_green"
                    android:textSize="@dimen/dimen_14"
                    android:layout_alignParentStart="true"
                    android:paddingStart="@dimen/dimen_10"
                    app:drawableLeftCompat="@drawable/ic_baseline_home_24"
                    tools:ignore="RtlSymmetry,SpUsage" />
            </RelativeLayout>

            <ImageButton
                android:id="@+id/imgbtn_call"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_add_call"
                android:background="@android:color/transparent"


                android:layout_alignParentEnd="true"
                android:contentDescription="@string/todo" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
